Логика кафки
