# src/main/java/org/example/transactionapp/rest/TransactionRestController.java
@@ -1,10 +1,14 @@
 package org.example.transactionapp.rest;
 
+import groovy.util.logging.Slf4j;
 import lombok.RequiredArgsConstructor;
-import org.example.transactionapp.dto.TransactionResponse;
-import org.example.transactionapp.dto.TransactionStatusResponseDTO;
-import org.example.transactionapp.entity.Transaction;
+import org.example.transactionapp.dto.TransactionConfirmRequest;
+import org.example.transactionapp.dto.TransactionConfirmResponse;
+import org.example.transactionapp.dto.TransactionInitResponse;
+import org.example.transactionapp.dto.TransactionStatusResponse;
+import org.example.transactionapp.service.HasAmount;
 import org.example.transactionapp.service.TransactionService;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -12,30 +16,29 @@ import java.util.UUID;
 
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("/transactions")
+@RequestMapping("/api/v1/transactions")
 public class TransactionRestController {
 
     private final TransactionService transactionService;
 
-    /**
-     * GET /transactions/{transactionId}/status
-     * Получение статуса транзакции
-     */
-    @GetMapping("/{transactionId}/status")
-    public ResponseEntity<TransactionStatusResponseDTO> getStatus(@PathVariable UUID transactionId) {
-        Transaction transaction = transactionService.getTransactionStatus(transactionId);
-        return ResponseEntity.ok(new TransactionStatusResponseDTO(transaction.getId(), transaction.getStatus()));
+    // Инициализация транзакции
+    @PostMapping("/transactions/{type}/init")
+    public ResponseEntity<TransactionInitResponse> initTransaction(@PathVariable String type,
+                                                                   @RequestBody HasAmount request) {
+        return ResponseEntity.ok(transactionService.init(type, request));
     }
-    /**
-     * POST /transactions/{transactionId}/confirm
-     * Подтверждение и выполнение транзакции
-     */
-    @PostMapping("/{transactionId}/confirm")
-    public ResponseEntity<TransactionResponse> confirm(
-            @PathVariable UUID transactionId) {
 
-        Transaction transaction = transactionService.confirmTransaction(transactionId);
-
-        return ResponseEntity.ok(TransactionResponse.from(transaction));
+    // Подтверждение транзакции
+    @PostMapping("/transactions/{type}/confirm")
+    public ResponseEntity<TransactionConfirmResponse> confirmTransaction(@PathVariable String type,
+                                                                         @RequestBody TransactionConfirmRequest request) {
+        return ResponseEntity.ok(transactionService.confirm(type, request));
     }
+
+    // Получение статуса транзакции
+    @GetMapping("/transactions/{transactionId}/status")
+    public ResponseEntity<TransactionStatusResponse> getTransactionStatus(@PathVariable UUID transactionId) {
+        return ResponseEntity.ok(transactionService.status(transactionId));
+    }
+
 }
